--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -1,48 +1,4 @@
-.div_container {
-    width: 60%;
-    margin: 0 auto;
-margin-bottom: 100px;
-
-}
-
-.main_title {
-    text-align: center;
-}
-
-.cancel {
-    text-align: center;
-    height: 30px;
-}
-
-.refresh {
-    text-align: center;
-    height: 30px;
-}
-
-.span_1 {
-    margin-left: 24.5rem;
-}
-
-.span_2 {
-    margin-left: 21.5rem;
-}
-
-.span_3 {
-    margin-left: 24rem;
-}
-
-.span_4 {
-    margin-left: 22.5rem;
-}
-
-.span_5 {
-    margin-left: 24.1rem;
-}
-
-.span_6 {
-    margin-left: 24.7rem;
-}
-
-.span_7 {
-    margin-left: 19.8rem;
+.img {
+    width: 800px;
+    height:350px;
 }
