--- a/src/pages/Bcard.css
+++ b/src/pages/Bcard.css
@@ -7,9 +7,18 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-left: 90rem;
+    margin-left: 90%;
     border:1px solid rgba(0, 0, 0, 0.397); 
     box-shadow: 0px 0px 15px 0px #000000;
-        
+    
 }
 
+.success {
+    
+    color: black;
+}
+
+.success:hover {
+    background-color: rgb(25, 110, 195);
+    color: white;
+}
